add busqueda y propiedades usuario
